--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@sentry/cli": "^2.42.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
+    "algoliasearch": "^5.21.0",
     "dotenv-flow": "^4.1.0",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.4.2",
