--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "lint": "eslint .",
+    "sentry:release": "export SENTRY_RELEASE=crstudio@$(git rev-parse --short HEAD) && echo \"📦 Release: $SENTRY_RELEASE\" && yarn build && sentry-cli releases new $SENTRY_RELEASE --org crstudio-th --project crstudio-main && sentry-cli releases files $SENTRY_RELEASE upload-sourcemaps ./public --url-prefix '~/static' --validate --rewrite --org crstudio-th --project crstudio-main && sentry-cli releases finalize $SENTRY_RELEASE --org crstudio-th --project crstudio-main",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@sentry/gatsby": "^9.1.0",
     "@sentry/react": "^9.1.0",
-    "@sentry/replay": "^7.116.0",
-    "@sentry/tracing": "^7.120.3",
+    "@sentry/replay": "^8.0.0-alpha.5",
+    "@sentry/webpack-plugin": "^3.3.1",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
