--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@sentry/gatsby": "^9.1.0",
-    "@sentry/react": "^9.1.0",
-    "@sentry/replay": "^8.0.0-alpha.5",
+    "@sentry/browser": "7.80.0",
+    "@sentry/gatsby": "7.80.0",
+    "@sentry/react": "7.80.0",
+    "@sentry/replay": "7.80.0",
     "@sentry/webpack-plugin": "^3.3.1",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/forms": "^0.5.10",
