--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "@testing-library/react": "^16.1.0",
     "algoliasearch": "^5.21.0",
     "dotenv-flow": "^4.1.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.4.2",
     "webpack": "^5.98.0"
