--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-json": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
+    "glob": "^11.0.1",
     "gsap": "^3.12.7",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.2",
