force Netlify to use Node.js 20.11.1

--- a/package.json
+++ b/package.json
@@ -76,6 +76,9 @@
     "prettier": "^3.4.2",
     "webpack": "^5.98.0"
   },
+  "engines": {
+    "node": ">=20.11.1"
+  },
   "keywords": [
     "art",
     "artists",
