--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "instantsearch.js": "^4.75.6",
     "ioredis": "^5.6.0",
     "js-sha1": "^0.7.0",
+    "lodash.debounce": "^4.0.8",
     "path-to-regexp": "^8.2.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
