Update test scripts for CI + local dev

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "serve": "gatsby serve",
     "sentry:release": "export SENTRY_RELEASE=crstudio@$(git rev-parse --short HEAD) && echo \"📦 Release: $SENTRY_RELEASE\" && yarn build && sentry-cli releases new $SENTRY_RELEASE --org crstudio-th --project crstudio-main && sentry-cli releases files $SENTRY_RELEASE upload-sourcemaps ./public --url-prefix '~/static' --validate --rewrite --org crstudio-th --project crstudio-main && sentry-cli releases finalize $SENTRY_RELEASE --org crstudio-th --project crstudio-main",
     "start": "gatsby develop",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest --ci",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -74,6 +76,7 @@
     "dotenv-flow": "^4.1.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
+    "jest": "^29.7.0",
     "patch-package": "^8.0.0",
     "postcss-loader": "^8.1.1",
     "postinstall-postinstall": "^2.1.0",
