--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,81 @@
 # .github/workflows/ci.yml :
-name: CI - Testen
+  
+name: CI - Build Test & Deploy
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  test:
+  build-and-test:
+    name: Test & Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '>=20.11.1'
-      - run: yarn install
-      - run: yarn test
+          node-version: '20.x'
+          cache: 'yarn'
+
+      - name: Install dependencies
+        env:
+          NODE_ENV: production
+        run: yarn install --frozen-lockfile
+
+      - name: Run Jest tests
+        run: yarn test --ci --coverage
+        env:
+          CI: true
+
+      - name: Run ESLint
+        run: yarn lint
+
+      - name: Build Gatsby site
+        run: yarn build
+
+      - name: Upload production build
+        uses: actions/upload-artifact@v4
+        with:
+          name: production-build
+          path: public/
+
+  deploy:
+    name: Netlify Deploy
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'yarn'
+
+      - name: Install dependencies
+        env:
+          NODE_ENV: production
+        run: yarn install --frozen-lockfile
+
+      - name: Download production build
+        uses: actions/download-artifact@v4
+        with:
+          name: production-build
+          path: public/
+
+      - name: Deploy to Netlify via CLI
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        run: |
+          npx netlify-cli deploy --prod --dir=public --site=$NETLIFY_SITE_ID --auth=$NETLIFY_AUTH_TOKEN
