--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "name": "crstudio",
   "private": true,
+  "type": "module", 
   "version": "1.0.0",
   "scripts": {
     "build": "gatsby build",
@@ -29,6 +30,7 @@
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@upstash/redis": "^1.34.9",
     "bufferutil": "^4.0.9",
     "co-body": "^6.2.0",
     "dotenv": "^16.4.7",
