--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "name": "crstudio",
   "private": true,
-  "type": "module", 
+  "type": "module",
   "version": "1.0.0",
   "scripts": {
     "build": "gatsby build",
@@ -77,6 +77,7 @@
     "algoliasearch": "^5.21.0",
     "dotenv-flow": "^4.1.0",
     "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-i18next": "^6.1.1",
     "eslint-plugin-prettier": "^5.2.6",
     "jest": "^29.7.0",
     "patch-package": "^8.0.0",
