--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "postcss-loader": "^8.1.1",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "webpack": "^5.98.0"
   },
   "resolutions": {
