--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
     "lint": "eslint .",
     "postinstall": "patch-package",
+    "prepare": "husky install",
     "serve": "gatsby serve",
     "sentry:release": "export SENTRY_RELEASE=crstudio@$(git rev-parse --short HEAD) && echo \"📦 Release: $SENTRY_RELEASE\" && yarn build && sentry-cli releases new $SENTRY_RELEASE --org crstudio-th --project crstudio-main && sentry-cli releases files $SENTRY_RELEASE upload-sourcemaps ./public --url-prefix '~/static' --validate --rewrite --org crstudio-th --project crstudio-main && sentry-cli releases finalize $SENTRY_RELEASE --org crstudio-th --project crstudio-main",
     "start": "gatsby develop",
@@ -79,7 +80,9 @@
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-i18next": "^6.1.1",
     "eslint-plugin-prettier": "^5.2.6",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "lint-staged": "^16.0.0",
     "patch-package": "^8.0.0",
     "postcss-loader": "^8.1.1",
     "postinstall-postinstall": "^2.1.0",
