--- a/package.json
+++ b/package.json
@@ -72,21 +72,28 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "@sentry/cli": "^2.42.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "algoliasearch": "^5.21.0",
     "dotenv-flow": "^4.1.0",
-    "eslint-config-prettier": "^10.1.2",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-i18next": "^6.1.1",
-    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.1.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^16.0.0",
     "patch-package": "^8.0.0",
     "postcss-loader": "^8.1.1",
     "postinstall-postinstall": "^2.1.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "webpack": "^5.98.0"
   },
