--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,7 @@
+# netlify.toml :
 [build]
-  command = "export SENTRY_RELEASE=crstudio@$(git rev-parse --short HEAD) && echo \"📦 Release: $SENTRY_RELEASE\" && yarn sentry:release"
+  # command = "export SENTRY_RELEASE=crstudio@$(git rev-parse --short HEAD) && echo \"📦 Release: $SENTRY_RELEASE\" && yarn sentry:release"
+  command = "gatsby build"
   publish = "public"
 
 [dev]
