--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "globals": "^16.1.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "lint-staged": "^16.0.0",
     "patch-package": "^8.0.0",
     "postcss-loader": "^8.1.1",
