--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "serve": "gatsby serve",
     "sentry:release": "export SENTRY_RELEASE=crstudio@$(git rev-parse --short HEAD) && echo \"📦 Release: $SENTRY_RELEASE\" && yarn build && sentry-cli releases new $SENTRY_RELEASE --org crstudio-th --project crstudio-main && sentry-cli releases files $SENTRY_RELEASE upload-sourcemaps ./public --url-prefix '~/static' --validate --rewrite --org crstudio-th --project crstudio-main && sentry-cli releases finalize $SENTRY_RELEASE --org crstudio-th --project crstudio-main",
     "start": "gatsby develop",
-    "test": "jest --ci",
+    "test": "jest",
+    "test:ci": "jest --ci",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:node": "jest --selectProjects node",
+    "test:jsdom": "jest --selectProjects jsdom"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -27,6 +30,7 @@
     "@sentry/react": "7.80.0",
     "@sentry/replay": "7.80.0",
     "@sentry/webpack-plugin": "^3.3.1",
+    "@supabase/auth-helpers-remix": "^0.4.0",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
@@ -96,6 +100,8 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "undici": "^7.10.0",
+    "web-streams-polyfill": "^4.1.0",
     "webpack": "^5.98.0"
   },
   "resolutions": {
